# Humilddleware

./: README.md
broker/: CMakeLists.txt  notifcons.c  notifcons.h  notifengine.c  notifengine.h  srh.c  srh.h  submanager.c  submanager.h  subscription.h
broker/src/: humilddleware.c  humilde.c  humilde.h  main.c  middleware.h  mom.c  mom.h  notifcons.c  notifcons.h  notifengine.c  notifengine.h  submanager.c  submanager.h
client/: CMakeLists.txt
client/lib/clps/src/: chr.c  chr.h  crh.c  crh.h  proxy.c  proxy.h
client/src/: main.c
esp/arduino/HumilddlewareClient/: platformio.ini
esp/arduino/HumilddlewareClient/src/: main.cpp
esp8266/arduino/HumilddlewareClient/include/: Configuration.h
esp8266/arduino/HumilddlewareClient/src/: main.cpp
esp8266/main/: CRH.cpp  CRH.h  ClientProxy.cpp  ClientProxy.h  main.ino
managing_system/: Adapter.js  index.mjs  package.json
managing_system/classes/: Adapter.js
middleware/broker/src/: notifcons.c  submanager.c  submanager.h  subscription.h
middleware/client/lib/Hummildleware/src/: Configuration.h  Invocation.h
src/: main.c  marshaller.c  notifcons.c  notifcons.h  notifengine.c  srh.c  submanager.c
src/broker/: humilde.c  humilde.h  notifcons.c  notifcons.h  notifengine.c  notifengine.h  srh.c  submanager.c  submanager.h  subscription.h  util.h
src/client/: crh.c  crh.h  proxy.c  proxy.h
src/main/: main.c  simulation.c  simulation.h
src/shared/: marshaller.h
thing/src/: humilddleware.c  humilddleware.cpp  humilddleware.h  main.cpp  wifi_config.h  wifi_info.h
(+16 files in other folders)
